force-app/main/default/objects/Offer__c/fields/Additional_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_and_Conditions__c</fullName>
    <label>Additional Terms and Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>