force-app/main/default/objects/Offer__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <type>TextArea</type>
</CustomField>