force-app/main/default/objects/Offer__c/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <label>Documents</label>
    <type>TextArea</type>
</CustomField>