force-app/main/default/objects/Offer__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <defaultValue>TODAY() + 30</defaultValue>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>