force-app/main/default/objects/Offer__c/fields/Offer_Close__c.field-meta.xml
<CustomField>
    <fullName>Offer_Close__c</fullName>
    <inlineHelpText>This appears after your offer on the template and will be included on your email to customers</inlineHelpText>
    <label>Offer Close</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>