force-app/main/default/objects/Offer__c/fields/Offer_Introduction__c.field-meta.xml
<CustomField>
    <fullName>Offer_Introduction__c</fullName>
    <inlineHelpText>This appears before your offer on the template and will be included on your email to customers</inlineHelpText>
    <label>Offer Introduction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>