force-app/main/default/objects/Offer__c/fields/Payment_Condition__c.field-meta.xml
<CustomField>
    <fullName>Payment_Condition__c</fullName>
    <label>Payment Condition</label>
    <type>TextArea</type>
</CustomField>