force-app/main/default/objects/Offer__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offer Sent</fullName>
            </value>
            <value>
                <fullName>Offer Received</fullName>
            </value>
            <value>
                <fullName>Offer Approved / Ordered</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>